--- a/app/src/main/res/layout/notes_item.xml
+++ b/app/src/main/res/layout/notes_item.xml
@@ -30,6 +30,9 @@
             android:layout_height="wrap_content"
             tools:text="Description"
             android:layout_margin="4dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:singleLine="true"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewTitle"/>
 
